--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "cSpell.words": [
+        "klaw",
+        "vsnotes"
+    ]
 }
